--- a/app/src/main/res/layout/view_apps.xml
+++ b/app/src/main/res/layout/view_apps.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:layout_width="match_parent" android:layout_height="match_parent">
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/scrollView" >
-
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/apps_tip"
-            android:id="@+id/textView2" />
+            android:orientation="vertical">
+            <LinearLayout style="@style/widget_panel">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="800dp"
+                    android:text="@string/apps_tip"
+                    android:id="@+id/textView3"
+                    android:textColor="#000" />
+            </LinearLayout>
+        </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
