--- a/app/src/main/res/layout/view_setup.xml
+++ b/app/src/main/res/layout/view_setup.xml
@@ -1,31 +1,60 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout style="@style/widget_panel" android:orientation="vertical">
+                <TextView style="@style/widget_panel_title"
+                    android:text="@string/text_setup_code_title" />
+                <TextView style="@style/widget_panel_context"
+                    android:text="@string/text_setup_code_description" />
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/test"
-        android:id="@+id/test_button"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="test" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SETTINGS"
-        android:id="@+id/button"
-        android:onClick="openSystemSettings"
-        android:layout_alignTop="@+id/test_button"
-        android:layout_centerHorizontal="true" />
-
-</RelativeLayout>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editText_code"
+                    android:layout_gravity="center_horizontal"
+                    android:inputType="textShortMessage|text"
+                    android:clickable="true"
+                    android:textAlignment="center" />
+            </LinearLayout>
+            <LinearLayout style="@style/widget_panel" android:orientation="vertical">
+                <TextView style="@style/widget_panel_title"
+                    android:text="@string/text_setup_access_title" />
+                <TextView style="@style/widget_panel_context"
+                    android:text="@string/text_setup_access_description" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/open_system_settings"
+                    android:id="@+id/button"
+                    android:onClick="openSystemSettings"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+            <LinearLayout style="@style/widget_panel" android:orientation="vertical">
+                <TextView style="@style/widget_panel_title"
+                    android:text="@string/text_setup_pc_title" />
+                <TextView style="@style/widget_panel_context"
+                    android:text="@string/text_setup_pc_description" />
+            </LinearLayout>
+            <LinearLayout style="@style/widget_panel" android:orientation="vertical">
+                <TextView style="@style/widget_panel_title"
+                    android:text="@string/text_setup_test_title" />
+                <TextView style="@style/widget_panel_context"
+                    android:text="@string/text_setup_test_description" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/button_test"
+                    android:id="@+id/test_button"
+                    android:onClick="test"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+</FrameLayout>
