--- a/app/src/main/res/layout/view_apps.xml
+++ b/app/src/main/res/layout/view_apps.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-    <ScrollView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/scrollView">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollView" >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <LinearLayout style="@style/widget_panel">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="800dp"
-                    android:text="@string/apps_tip"
-                    android:id="@+id/textView3"
-                    android:textColor="#000" />
-            </LinearLayout>
+        android:orientation="vertical">
+        <LinearLayout style="@style/widget_panel">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="800dp"
+                android:text="@string/apps_tip"
+                android:id="@+id/textView3"
+                android:textColor="#000" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save log"
+                android:onClick="saveLog"
+                android:layout_gravity="center"/>
         </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
